# api/validations/authValidator.js
@@ -10,6 +10,7 @@ export const registerValidator = [
   body("password")
     .isLength({ min: 6 })
     .withMessage("Password must be at least 6 characters"),
+  body("phone").notEmpty().withMessage("Phone is required"),
 ];
 
 export const loginValidator = [
